# campaign-manager

./: .env.example  .gitignore  README.md  project.yaml  pyproject.toml
content/: devto-launch-article.md  mirrrd-blog-review.md  mirrrd-campaign-research.md  reddit-blogging.md  reddit-contentcreation.md  reddit-entrepreneur-etsy.md  reddit-etsy.md  reddit-etsysellers.md  reddit-freelancewriters.md  reddit-imadethis.md  reddit-marketing.md  reddit-onlineincomehustle.md  reddit-seo.md  reddit-sideproject.md  reddit-smallbusiness.md
src/marketing/: __init__.py  __main__.py  cli.py  config.py  db.py
src/marketing/analyzers/: brief.py  channels.py
src/marketing/models/: campaign.py  draft.py  metric.py  post.py
src/marketing/posters/: base.py  devto.py  reddit.py
src/marketing/reports/: formatters.py  summary.py
src/marketing/trackers/: base.py  devto.py  reddit.py
templates/: blog_post.md  project.yaml  reddit_post.md
